--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "nodemon src/server.js",
   "scripts": {
-    "test": "nodemon test",
     "dev": "nodemon src/server.js",
-    "dev:debug": "nodemon --inspect src/server.js"
+    "dev:debug": "nodemon --inspect src/server.js",
+    "pretest": "SET NODE_ENV=test&& sequelize db:migrate",
+    "test": "SET NODE_ENV=test&& yarn jest",
+    "posttest": "SET NODE_ENV=test&& sequelize db:migrate:undo:all"
   },
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
@@ -19,14 +22,21 @@
     "yup": "^0.28.1"
   },
   "devDependencies": {
+    "@sucrase/jest-plugin": "^2.0.0",
+    "@types/jest": "^25.1.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.12.1"
+    "sqlite3": "^4.1.1",
+    "sucrase": "^3.12.1",
+    "supertest": "^4.0.2"
   }
 }
